--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "mariadb": "^2.5.5",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3-rc.0"
+    "mysql2": "^2.3.3-rc.0",
+    "redis": "^3.1.2"
   }
 }
